hphp/test/slow/lang/class_meth.php.expectf
private: created in C
string(10) "trait_meth"

Fatal error: Failure to resolve method name 'private_meth' in %s/class_meth.php on line 28
